# simplemem-claude-plugin

./: .gitignore  README.md  README_TOOLS.md  SKILL.md  demo_tools.sh  pyproject.toml
.claude-plugin/: plugin.json
skills/recall-memory/: SKILL.md
skills/save-memory/: SKILL.md
skills/status/: SKILL.md
tests/: conftest.py  test_install.py  test_recall.py  test_save.py  test_status.py
tools/: simplemem_install.py  simplemem_recall.py  simplemem_save.py  simplemem_status.py
